# karen

./: BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVALS-PLAN.md  KAREN-VS-WEB-RESEARCHER-MCP.md  README.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  eval-benchmark-issue.yml  feature-request.yml  skill-bug-report.yml
.github/workflows/: evals-selftest.yml
.karen/: harness.json
.karen/gates/: gate-1-supply-chain.sh  gate-2-completeness.sh  gate-3-security.sh  gate-4-docs-parity.sh  gate-5-compliance.sh  gate-6-test-integrity.sh  gate-7-agent-context.sh
.karen/hooks/: README.md
brand/: BRAND.md
evals/: README.md
evals/fixtures/go-backend-single/: answer-key.md  expected-gates.json  expected-karen.json  planted-issues.json
evals/fixtures/go-mcp-server-single/: answer-key.md  expected-gates.json  expected-karen.json  fixture-manifest.json  planted-issues.json
evals/fixtures/go-monorepo/: answer-key.md  expected-gates.json  expected-karen.json  fixture-manifest.json  planted-issues.json
evals/fixtures/go-notification-dispatcher-single/: answer-key.md  expected-gates.json  expected-karen.json  fixture-manifest.json  planted-issues.json
evals/fixtures/node-client-app-single/: answer-key.md  expected-gates.json  expected-karen.json  fixture-manifest.json  planted-issues.json
evals/fixtures/node-mcp-server-single/: answer-key.md  (+3 more)
evals/fixtures/python-backend-single/repo/: CLAUDE.md  README.md  SECURITY.md  pyproject.toml
evals/fixtures/python-backend-single/repo/.github/workflows/: ci.yml
evals/fixtures/python-backend-single/repo/src/beacon_ingest/: __init__.py  cache.py  config.py  redis_client.py  server.py
evals/fixtures/python-backend-single/repo/tests/e2e/: conftest.py  test_beacons_e2e.py
evals/fixtures/python-mcp-server-single/repo/: CLAUDE.md  README.md  SECURITY.md  pyproject.toml
evals/fixtures/python-mcp-server-single/repo/src/incident_mcp_server/: __init__.py  config.py  server.py
evals/fixtures/python-mcp-server-single/repo/src/incident_mcp_server/tools/: apply_config_patch.py  notify.py  run_diagnostic_command.py
evals/fixtures/python-mcp-server-single/repo/tests/: test_apply_config_patch.py  test_run_diagnostic_command.py
evals/fixtures/python-monorepo/repo/backend/: README.md  pyproject.toml
evals/fixtures/python-monorepo/repo/backend/docs/compliance/: SOC2-CONTROLS.md
evals/fixtures/python-monorepo/repo/backend/src/signal_relay_backend/: __init__.py  audit_log.py  cache.py  config.py  server.py
evals/fixtures/python-monorepo/repo/backend/tests/: test_server.py
evals/fixtures/python-monorepo/repo/client-lib/: README.md  pyproject.toml
evals/fixtures/python-monorepo/repo/client-lib/src/signal_relay_client/: __init__.py  client.py  config.py  filters.py
evals/fixtures/python-monorepo/repo/client-lib/tests/: test_client.py
evals/fixtures/python-sdk-single/repo/: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
evals/fixtures/python-sdk-single/repo/.github/workflows/: ci.yml
evals/fixtures/python-sdk-single/repo/docs/internal/: GAPS.md
evals/fixtures/python-sdk-single/repo/src/prism_sdk/: __init__.py  client.py  config.py  exporter.py  utils.py  webhooks.py
evals/fixtures/python-sdk-single/repo/tests/: test_client.py  test_config.py  test_exporter.py
evals/grading/: aggregate-report.js  judge-interview-followup.md  score-circuit-breaker.js  score-delta.js  score-detection.js  score-fingerprint-stability.js  score-gate-contract.js  score-gate-issues.js  score-interview.js  score-karen-json.js  score-known-gaps.js  score-reconciliation.js
evals/runner/: fake-user-agent-brief.md  fixture-workflow.js
evals/schema/: CONTRACT.md
evals/self-test/: run-self-test.js
(+369 files in other folders)
