[project]
name = "incident-mcp-server"
version = "0.3.0"
description = "MCP server exposing incident-response tools (diagnostics, config patching) to a connected LLM client."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "mcp>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=incident_mcp_server --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["src/incident_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
