[project]
name = "prism-sdk"
version = "0.4.0"
description = "Python client library for the Prism transcription platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/prism-labs/prism-sdk-python"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=prism_sdk --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["src/prism_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
